--- a/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
+++ b/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
@@ -19,7 +19,7 @@
             <Setter Property="Visibility" Value="Collapsed"/>
         </Style>
 
-        <!--<Style x:Key="Adaptive.Action.Tap" TargetType="Button">
+        <Style x:Key="Adaptive.Action.Tap" TargetType="Button">
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Cursor" Value="Hand" />
@@ -49,7 +49,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style>-->
+        </Style>
     </Window.Resources>
 
     <Grid Margin="8">
