refactor rendereroptions into hierachy of element styles

--- a/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
+++ b/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
@@ -52,7 +52,7 @@
         </Style>
     </Window.Resources>
 
-    <Grid Margin="8">
+    <Grid Margin="8" >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -75,12 +75,10 @@
         <avalon:TextEditor Grid.Row="1" Name="textBox" SyntaxHighlighting="Json" FontFamily="Consolas" FontSize="10pt"
                             ShowLineNumbers="true" TextChanged="textBox_TextChanged"/>
 
-        <Border Margin="68,67,60,67"  CornerRadius="20" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" >
-            <Border.Effect>
-                <DropShadowEffect />
-            </Border.Effect >
-            <Grid Name="cardGrid" Background="WhiteSmoke" MaxWidth="700" />
-        </Border>
+        <Grid Grid.Column="1" Grid.Row="1" Background="DarkGray">
+            
+            <Grid Name="cardGrid" MaxWidth="700" VerticalAlignment="Top" Margin="10"  />
+        </Grid>
 
         <Grid Grid.Row="2" Name="cardError" />
 
