Updates validation handling Adds support for supportsInteractivity Removes the need to pass a container to render Fixes ImageSet layout Renames action classes Renames input classes Simplified action execution handlers Updated visualizer: Action.ShowCard will now actually popup

--- a/source/html/visualizer/css/toast.css
+++ b/source/html/visualizer/css/toast.css
@@ -276,11 +276,19 @@ td.factValue {
     user-select: none;
 }
 
-.pushButton:hover, .linkbutton:hover {
+.linkButton:hover {
     border: 2px solid #A9A9A9;
 }
 
-.pushButton:active, .linkbutton:active {
+.linkButton:active {
+    background-color: #828282;
+}
+
+.pushButton:hover {
+    border: 2px solid #A9A9A9;
+}
+
+.pushButton:active {
     background-color: #828282;
 }
 
