--- a/source/html/visualizer/css/cortanaCar.css
+++ b/source/html/visualizer/css/cortanaCar.css
@@ -269,19 +269,18 @@ td.factValue {
     margin-right: 10px;
 }
 
-.pushButton {
+.pushButton, .linkButton {
     font-family: 'Segoe UI', sans-serif;
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 500;
     overflow: hidden;
     text-overflow: ellipsis;
-    border: none;
+    border: 2px solid transparent;
     padding: 4px 10px 5px 10px;
-    min-width: 80px; 
     text-align: center;
     vertical-align: middle;  
     cursor: default;
-    background-color: #0078D7;
+    background-color: #464646;
     color: white;    
     -webkit-user-select: none;   /* Chrome/Safari/Opera */
     -moz-user-select: none;      /* Firefox */
@@ -289,12 +288,20 @@ td.factValue {
     user-select: none;
 }
 
+.linkButton:hover {
+    border: 2px solid #A9A9A9;
+}
+
+.linkButton:active {
+    background-color: #828282;
+}
+
 .pushButton:hover {
-    background-color: #005A9E;
+    border: 2px solid #A9A9A9;
 }
 
 .pushButton:active {
-    background-color: #004D84;
+    background-color: #828282;
 }
 
 /*
@@ -307,44 +314,6 @@ Other styles that can be specified:
     .pushButton.subdued:hover
     .pushButton.subdued:active
 */
-
-.linkButton {
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    cursor: pointer;
-    border: none;
-    padding: none;
-    color: #0078D7;
-    background-color: transparent;
-    -webkit-user-select: none;   /* Chrome/Safari/Opera */
-    -moz-user-select: none;      /* Firefox */
-    -ms-user-select: none;       /* Internet Explorer/Edge */
-    user-select: none;
-}
-
-.linkButton:hover {
-    color: #005A9E;
-}
-
-.linkButton:active {
-    color: #004D84;
-}
-
-.linkButton.subdued {
-    color: #666666;
-    font-weight: 500;
-}
-
-.linkButton.subdued:hover {
-    color: #005A9E;
-}
-
-.linkButton.subdued:active {
-    color: #004D84;
-}
 
 /*
 Other styles that can be specified:
