--- a/source/html/visualizer/css/skypeCard.css
+++ b/source/html/visualizer/css/skypeCard.css
@@ -23,6 +23,11 @@
     background: rgba(234, 234, 234, 0.68);
 }
 
+.showCardActionContainer {
+    background: rgba(234, 234, 234, 0.68);    
+    padding: 10px;
+}
+
 .stretch {
     width: 100%;
 }
@@ -269,7 +274,7 @@ td.factValue {
 .buttonStripItemSpacer {
 }
 
-.pushButton {
+.pushButton, .linkButton {
     font-family: 'Segoe UI', sans-serif;
     font-size: 15px;
     font-weight: 500;
@@ -296,6 +301,16 @@ td.factValue {
     color: #fff;
 }
 
+.linkButton:hover {
+    background-color: #0078d7;
+    color: #fff;
+}
+
+.linkButton:active {
+    background-color: #0078d7;
+    color: #fff;
+}
+
 /*
 Other styles that can be specified:
     .pushButton.expanded
@@ -306,44 +321,6 @@ Other styles that can be specified:
     .pushButton.subdued:hover
     .pushButton.subdued:active
 */
-
-.linkButton {
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    cursor: pointer;
-    border: none;
-    padding: none;
-    color: #0078D7;
-    background-color: transparent;
-    -webkit-user-select: none;   /* Chrome/Safari/Opera */
-    -moz-user-select: none;      /* Firefox */
-    -ms-user-select: none;       /* Internet Explorer/Edge */
-    user-select: none;
-}
-
-.linkButton:hover {
-    color: #005A9E;
-}
-
-.linkButton:active {
-    color: #004D84;
-}
-
-.linkButton.subdued {
-    color: #666666;
-    font-weight: 500;
-}
-
-.linkButton.subdued:hover {
-    color: #005A9E;
-}
-
-.linkButton.subdued:active {
-    color: #004D84;
-}
 
 /*
 Other styles that can be specified:
