--- a/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
+++ b/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfVisualizer.MainWindow"
+﻿<Window xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"  x:Class="WpfVisualizer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -60,25 +60,41 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="5">
             <Button Name="loadButton" Click="loadButton_Click" Content="Load" Margin="4"/>
             <Button Name="viewImage" Click="viewImage_Click" Content="View as Image" Margin="4"/>
             <Button Name="speak" Click="speak_Click" Content="Speak" Margin="4"/>
             <Button Name="toJson" Content="To JSON" Margin="4" Click="toJson_Click"/>
             <Button Name="toXml" Content="To XML" Margin="4" Click="toXml_Click"/>
+            <Button Name="toggleOptions" Content="RenderOptions" Margin="4" Click="toggleOptions_Click"/>
         </StackPanel>
 
         <!--<TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>-->
         <avalon:TextEditor Grid.Row="1" Name="textBox" SyntaxHighlighting="Json" FontFamily="Consolas" FontSize="10pt"
                             ShowLineNumbers="true" TextChanged="textBox_TextChanged"/>
 
-        <Grid Grid.Column="1" Grid.Row="1" Background="DarkGray">
+        <GridSplitter Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" ResizeDirection="Columns"/>
+
+        <Grid Grid.Row="1" Grid.Column="2" Background="DarkGray">
             
             <Grid Name="cardGrid" MaxWidth="700" VerticalAlignment="Top" Margin="10"  />
         </Grid>
+
+        <GridSplitter Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch" ResizeDirection="Columns"/>
+
+
+        <GridSplitter Grid.Row="1" Grid.Column="4" VerticalAlignment="Stretch" ResizeDirection="Columns" Name="optionsSplitter" />
+        
+        <!--<avalon:TextEditor Grid.Row="1" Grid.Column="5" Name="options" SyntaxHighlighting="Json" FontFamily="Consolas" FontSize="10pt"
+                            ShowLineNumbers="true" TextChanged="options_TextChanged" Visibility="Collapsed"/>-->
+        <xctk:PropertyGrid Grid.Row="1" Grid.Column="5"  SelectedObject="{Binding}" Name="options" PropertyChanged="options_PropertyChanged" Visibility="Collapsed" >
+        </xctk:PropertyGrid>
 
         <Grid Grid.Row="2" Name="cardError" />
 
