--- a/source/html/visualizer/css/liveTile.css
+++ b/source/html/visualizer/css/liveTile.css
@@ -1,123 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-.removeTopSpacing {
-  margin-top: 0 !important;
-}
-
-.separator {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  margin: 20px 0 0 0;
-  padding: 20px 0 0 0;
-}
-
-.stretch {
-  width: 100%;
-}
-
-.smallSize {
-  width: 100px;
-}
-
-.mediumSize {
-  width: 200px;
-}
-
-.largeSize {
-  width: 300px;
-}
-
-.text {
-  font-family: 'Segoe UI', sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-}
-
-.text.defaultSize {
-  font-size: 14px;
-}
-
-.text.small {
-  font-size: 12px;
-}
-
-.text.medium {
-  font-size: 20px;
-}
-
-.text.large {
-  font-size: 24px;
-}
-
-.text.extraLarge {
-  font-size: 30px;
-}
-
-.text.lighter {
-  font-weight: 200;
-}
-
-.text.defaultWeight {
-  font-weight: 400;
-}
-
-.text.bolder {
-  font-weight: 600;
-}
-
-.text.defaultColor {
-  color: #333333;
-}
-
-.text.defaultColor.subtle {
-  color: rgba(51, 51, 51, 0.5);
-}
-
-.text.darkColor {
-  color: #333333;
-}
-
-.text.darkColor.subtle {
-  color: rgba(51, 51, 51, 0.5);
-}
-
-.text.lightColor {
-  color: white;
-}
-
-.text.lightColor.subtle {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.text.accentColor {
-  color: #2e89fc;
-}
-
-.text.accentColor.subtle {
-  color: rgba(46, 137, 252, 0.5);
-}
-
-.text.goodColor {
-  color: #2ccc35;
-}
-
-.text.warningColor {
-  color: #f9a203;
-}
-
-.text.attentionColor {
-  color: darkred;
-}
-
-.rootContainer {
-  padding: 10px;
-}
-
-.container {
-  margin: 20px 0 0 0;
-}
-
 .container.selectable {
   padding: 5px;
 }
@@ -130,37 +10,8 @@
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-.container.startGroup {
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
-  padding-top: 20px;
-}
-
-.image {
-  margin: 5px 0 0 0;
-}
-
 .image.selectable {
   cursor: pointer;
-}
-
-.image.autoSize {
-  max-width: 100%;
-}
-
-.image.stretch {
-  width: 100%;
-}
-
-.image.small {
-  max-width: 40px;
-}
-
-.image.medium {
-  max-width: 80px;
-}
-
-.image.large {
-  max-width: 160px;
 }
 
 .image.person {
@@ -169,23 +20,7 @@
   background-repeat: no-repeat;
 }
 
-.imageGallery {
-  margin: 20px 0 0 0;
-}
-
-table.factGroup {
-  margin: 20px 0 0 0;
-  border-width: 0;
-  border-spacing: 0;
-  border-style: none;
-  border-collapse: collapse;
-}
-
-tr.factGroupRowSpacer {
-  height: 10px;
-}
-
-td.factName {
+.factNameContainer {
   border-width: 0;
   padding: 0;
   border-style: none;
@@ -194,69 +29,41 @@ td.factName {
   white-space: nowrap;
 }
 
-td.factValue {
+.factValueContainer {
   border-width: 0;
   padding: 0;
   border-style: none;
   vertical-align: top;
-  padding: 0 0 0 10px;
-}
-
-.columnGroup {
-  margin: 15px 0 5px 0;
-}
-
-.column.selectable {
-  padding: 5px;
-}
-
-.column.selectable:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.column.selectable:active {
-  background-color: rgba(0, 0, 0, 0.15);
-}
-
-.defaultColumnSeparator {
-  width: 10px;
-}
-
-.strongColumnSeparator {
-  border-left: 1px solid #EEEEEE;
-  margin-left: 10px;
   padding-left: 10px;
 }
 
-.actionGroup {
-  margin: 20px 0 0 0;
+/*
+* {
+    box-sizing: border-box;
 }
 
-.actionCardContainer {
-  margin: 16px -20px 0 -20px;
-  padding: 16px 20px 16px 20px;
-  background-color: #F8F8F8;
-}
+@include base-spacing();
 
-.buttonStrip {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: hidden;
-}
+@include base-sizes();
 
-.buttonStripItem {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 100%;
-          flex: 0 1 100%;
-  white-space: nowrap;
-  overflow: hidden;
-}
+@include base-text-default();
 
-.buttonStripItemSpacer {
-  margin-right: 10px;
-}
+@include base-text-dark();
 
+@include base-text-light();
+
+@include base-text-special();
+
+@include base-container($root-padding:10px);
+
+@include base-image();
+
+@include base-table();
+
+@include base-column();
+
+@include base-actions($item-flex-basis: 100%);
+*/
 .pushButton, .linkButton {
   font-family: 'Segoe UI', sans-serif;
   font-size: 15px;
@@ -282,20 +89,6 @@ td.factValue {
 
 .pushButton:active, .linkButton:active {
   background-color: rgba(0, 0, 0, 0.3);
-}
-
-/*
-    Other styles that can be specified:
-        .pushButton.expanded
-        .pushButton.expanded:hover
-        .pushButton.expanded:active
-
-        .pushButton.subdued
-        .pushButton.subdued:hover
-        .pushButton.subdued:active
-    */
-.input {
-  margin: 10px 0 0 0;
 }
 
 .input.textInput {
