--- a/source/html/visualizer/scss/skypeCard.scss
+++ b/source/html/visualizer/scss/skypeCard.scss
@@ -1,17 +1,11 @@
 @import 'node_modules/adaptive-cards/scss/base';
 
-//TODO: remove or scope the asterisk selector so it does not pollute the global scope in the host page
-* {
-    box-sizing: border-box;
-}
-
-@include base-spacing();
-
 .skypeContainer {
     display: flex;
     align-items: flex-start;
 }
 
+/*
 .rootContainer {
     width: 300px;
     border-radius: 5px;
@@ -22,39 +16,7 @@
     background: rgba(234, 234, 234, 0.68);    
     padding: 10px;
 }
-
-@include base-sizes();
-
-@include base-text-default($base-color: #fff, $extra-large-size: 40px);
-
-@include base-text-dark();
-
-@include base-text-light();
-
-@include base-text-special();
-
-@include base-container($root-padding: 10px);
-
-@include base-image(0);
-
-@include base-table();
-
-@include base-column(null);
-
-@include base-actions($card-container-padding: 16px 20px 16px 20px, $button-strip: false);
-
-.buttonStrip {
-    display: flex;
-    flex-direction: column;
-}
-
-.buttonStripItem {
-    flex-grow: 1;
-    flex-shrink: 1;
-    text-align: center;
-    flex-wrap: wrap;
-    margin: 5px;
-}
+*/
 
 @include base-push-button(
     $font-size: 15px, 
