--- a/source/html/visualizer/css/skypeCard.css
+++ b/source/html/visualizer/css/skypeCard.css
@@ -37,13 +37,6 @@
   padding-left: 10px;
 }
 
-/*
-* {
-    box-sizing: border-box;
-}
-
-@include base-spacing();
-*/
 .skypeContainer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -64,56 +57,14 @@
     background: rgba(234, 234, 234, 0.68);    
     padding: 10px;
 }
-
-@include base-sizes();
-
-@include base-text-default($base-color: #fff, $extra-large-size: 40px);
-
-@include base-text-dark();
-
-@include base-text-light();
-
-@include base-text-special();
-
-@include base-container($root-padding: 10px);
-
-@include base-image(); // 0);
-
-@include base-table();
-
-@include base-column(null);
-
-@include base-actions($card-container-padding: 16px 20px 16px 20px, $button-strip: false);
 */
-.buttonStrip {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.buttonStripItem {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-  text-align: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 5px;
-}
-
 .pushButton, .linkButton {
   font-family: 'Segoe UI', sans-serif;
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 400;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 6px 10px 5px 10px;
+  padding: 4px 10px 6px 10px;
   text-align: center;
   vertical-align: middle;
   cursor: default;
@@ -133,8 +84,8 @@
 
 .pushButton, .linkButton {
   border: solid 2px #dcdcdc;
-  border-radius: 25px;
-  height: 40px;
+  border-radius: 20px;
+  line-height: 30px;
 }
 
 .input.textInput {
