--- a/source/html/visualizer/scss/skypeCard.scss
+++ b/source/html/visualizer/scss/skypeCard.scss
@@ -20,9 +20,9 @@
 
 @include base-push-button(
     $font-size: 15px, 
-    $font-weight: 500, 
+    $font-weight: 400, 
     $border: null, 
-    $padding: 6px 10px 5px 10px,
+    $padding: 4px 10px 6px 10px,
     $min-width: null,
     $background-color: white,
     $color: #0078d7,
@@ -35,8 +35,8 @@
 
 .pushButton {
     border: solid 2px #dcdcdc;
-    border-radius: 25px;
-    height: 40px;
+    border-radius: 20px;
+    line-height: 30px;
 }
 
 .linkButton {
