--- a/source/html/visualizer/css/cortanaCar.css
+++ b/source/html/visualizer/css/cortanaCar.css
@@ -1,40 +1,5 @@
-.container.selectable {
-  padding: 5px;
-}
-
-.container.selectable:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.container.selectable:active {
-  background-color: rgba(0, 0, 0, 0.15);
-}
-
 .image.selectable {
   cursor: pointer;
-}
-
-.image.person {
-  border-radius: 50%;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
-
-.factNameContainer {
-  border-width: 0;
-  padding: 0;
-  border-style: none;
-  min-width: 100px;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-.factValueContainer {
-  border-width: 0;
-  padding: 0;
-  border-style: none;
-  vertical-align: top;
-  padding-left: 10px;
 }
 
 .cortanaLogo {
@@ -47,8 +12,20 @@
   margin-bottom: 10px;
 }
 
+.container.selectable {
+  padding: 5px;
+}
+
+.container.selectable:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.container.selectable:active {
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
 .pushButton, .linkButton {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   font-size: 15px;
   font-weight: 500;
   overflow: hidden;
@@ -85,7 +62,7 @@
 }
 
 .input.textInput, .input.number, .input.date, .input.time, .input.multichoiceInput {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   border-color: #EAEAEA;
   border-width: 1px;
   border-style: solid;
