--- a/source/html/visualizer/scss/teamsConnectorCard.scss
+++ b/source/html/visualizer/scss/teamsConnectorCard.scss
@@ -1,5 +1,7 @@
 @import 'node_modules/adaptive-cards/scss/base';
 
+@include base-container();
+
 @include base-push-button();
 
 @include base-link-button(
