--- a/source/html/visualizer/scss/toast.scss
+++ b/source/html/visualizer/scss/toast.scss
@@ -1,5 +1,7 @@
 @import 'node_modules/adaptive-cards/scss/base';
 
+@include base-container();
+
 @include base-push-button(
     $font-size: 15px,
     $font-weight: 500, 
@@ -18,7 +20,6 @@
 @include base-input(
     $border-color: #797979,
     $border-width: 2px,
-    $margin: 2px 0 0 0,
     $hover-border: 2px solid #A5A5A5,
     $hover-background-color: #0C0C0C
     );
