--- a/source/html/visualizer/css/outlookConnectorCard.css
+++ b/source/html/visualizer/css/outlookConnectorCard.css
@@ -1,3 +1,7 @@
+.image.selectable {
+  cursor: pointer;
+}
+
 .container.selectable {
   padding: 5px;
 }
@@ -10,35 +14,8 @@
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-.image.selectable {
-  cursor: pointer;
-}
-
-.image.person {
-  border-radius: 50%;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
-
-.factNameContainer {
-  border-width: 0;
-  padding: 0;
-  border-style: none;
-  min-width: 100px;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-.factValueContainer {
-  border-width: 0;
-  padding: 0;
-  border-style: none;
-  vertical-align: top;
-  padding-left: 10px;
-}
-
 .pushButton {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   font-size: 14px;
   font-weight: 600;
   overflow: hidden;
@@ -66,7 +43,7 @@
 }
 
 .linkButton {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   font-size: 14px;
   font-weight: 600;
   overflow: hidden;
@@ -120,7 +97,7 @@
 }
 
 .input.textInput, .input.number, .input.date, .input.time, .input.multichoiceInput {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   border-color: #EAEAEA;
   border-width: 1px;
   border-style: solid;
