--- a/source/html/visualizer/scss/cortanaCar.scss
+++ b/source/html/visualizer/scss/cortanaCar.scss
@@ -10,6 +10,8 @@
     margin-bottom: 10px;
 }
 
+@include base-container();
+
 @include base-push-button(
     $background-color: #464646,
     $border: 2px solid transparent,
