--- a/source/html/visualizer/scss/cortanaCar.scss
+++ b/source/html/visualizer/scss/cortanaCar.scss
@@ -23,8 +23,8 @@
     $min-width: null
     );
 
-.linkButton {
-    @extend .pushButton;
+.ac-linkButton {
+    @extend .ac-pushButton;
 }
 
 @include base-input();
