--- a/source/html/visualizer/scss/teamsConnectorCard.scss
+++ b/source/html/visualizer/scss/teamsConnectorCard.scss
@@ -17,7 +17,7 @@
     $subdued: false
     );
 
-.linkButton {
+.ac-linkButton {
     min-width: 80px; 
     text-align: center;
     vertical-align: middle;    
