--- a/source/html/visualizer/css/outlookConnectorCard.css
+++ b/source/html/visualizer/css/outlookConnectorCard.css
@@ -88,10 +88,11 @@
     */
 .ac-input {
   font-family: "Segoe UI", sans-serif;
+  font-size: 14px;
+  color: black;
 }
 
 .ac-input.ac-textInput {
-  font-size: 14px;
   height: 30px;
   resize: none;
 }
@@ -100,9 +101,7 @@
   height: 72px;
 }
 
-.ac-input.ac-textInput, .ac-input.ac-numberInput, .ac-input.ac-dateInput, .ac-input.ac-timeInput, .ac-input.multichoiceInput {
-  border-color: #EAEAEA;
-  border-width: 1px;
-  border-style: solid;
+.ac-input.ac-textInput, .ac-input.ac-numberInput, .ac-input.ac-dateInput, .ac-input.ac-timeInput, .ac-input.ac-multichoiceInput {
+  border: 1px solid #DDDDDD;
   padding: 4px 8px 4px 8px;
 }
