Update hostConfig.factSet Add title.wrap, title.maxWidth and value.wrap Fix some CSS for better action button scaling

--- a/source/html/visualizer/scss/cortanaCar.scss
+++ b/source/html/visualizer/scss/cortanaCar.scss
@@ -19,8 +19,7 @@
     $font-weight: 500,
     $active-background-color: #828282,
     $hover-background-color: null,
-    $hover-border: 2px solid #A9A9A9,
-    $min-width: null
+    $hover-border: 2px solid #A9A9A9
     );
 
 .ac-linkButton {
