--- a/source/html/visualizer/scss/liveTile.scss
+++ b/source/html/visualizer/scss/liveTile.scss
@@ -9,8 +9,7 @@
     $font-weight: 500,
     $active-background-color: rgba(0, 0, 0, 0.3),
     $hover-background-color: null,
-    $hover-border:  2px solid rgba(0, 0, 0, 0.2),
-    $min-width: null
+    $hover-border:  2px solid rgba(0, 0, 0, 0.2)
     );
 
 .ac-linkButton {
