Much better alignment support Make buttons <button> tags Remove supportedElementTypes and supportedActionTypes Make hostConfig.fontFamily optional

--- a/source/html/renderer/scss/base.scss
+++ b/source/html/renderer/scss/base.scss
@@ -79,7 +79,7 @@ $font-family: 'Segoe UI', sans-serif;
     $hover-background-color: null,
     $hover-border: null,
     $hover-color: #005A9E,
-    $padding: none,
+    $padding: 0,
     $subdued: true,
     $text-align: null,
     $vertical-align: null
