--- a/source/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
+++ b/source/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
@@ -73,7 +73,8 @@
                             android:id="@+id/visualAdaptiveCardLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical" />
+                            android:orientation="vertical" >
+                        </LinearLayout>
                     </ScrollView>
                 </LinearLayout>
 
