Fix Image.selectAction not working with Action.ShowCard Fix selectAction being ignore on images in an ImageSet Fix popu card container not sizing properly in visualizer

--- a/source/html/visualizer/css/app.css
+++ b/source/html/visualizer/css/app.css
@@ -20,7 +20,7 @@ body {
     background-color: white;
     box-shadow: 0 0 15px -5px rgba(0,0,0,.4);
     padding: 20px;
-    width: 300px;
+    min-width: 300px;
 }
 
 .errorContainer {
