add background color to normal to prevent empty object

--- a/source/tools/hostConfig/scss-to-json/test.scss
+++ b/source/tools/hostConfig/scss-to-json/test.scss
@@ -87,6 +87,7 @@ $hostConfig: (
       spacing: $my-margin
     ),
     normal: (
+      backgroundColor: $my-background-color
     ),
     emphasis: (
       backgroundColor: $my-background-color,
